@@ -28,6 +28,7 @@ The following bugs are resolved with this release:
   [32810] Crash on x86-64 if XSAVEC disable via tunable
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
   [33185] Fix double-free after allocation failure in regcomp
+  [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
 
 Version 2.40
 
